--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     // Инициализация
     Cesium.Ion.defaultAccessToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI1NDgwZmY4MS0wYjJjLTQwZDAtYjgxMC0wNmU0OTBiMzNjNzEiLCJpZCI6Mjg4NjQ5LCJpYXQiOjE3NDMxNTEzNjV9.78SOshFiLo1g6VT_K3cUMbL3Cpcp8GMTRcCP1aQfs_Q';
 
-    const viewer = new Cesium.Viewer('cesiumContainer', {
-      terrainProvider: Cesium.createWorldTerrain(),
-      timeline: false,
-      animation: false
+    const viewer = new Cesium.Viewer("cesiumContainer", {
+      terrainProvider: Cesium.CesiumTerrainProvider.fromIonAssetId(1),
+      imageryProvider: new Cesium.IonImageryProvider({ assetId: 3 }),
+      baseLayerPicker: false,
     });
 
     // Загрузка KML ассета
