--- a/index.html
+++ b/index.html
@@ -1,49 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Magnetism Map</title>
-    <script src="https://cesium.com/downloads/cesiumjs/releases/1.113/Build/Cesium/Cesium.js"></script>
-    <link href="https://cesium.com/downloads/cesiumjs/releases/1.113/Build/Cesium/Widgets/widgets.css" rel="stylesheet" />
-    <style>
-      html,
-      body,
-      #cesiumContainer {
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="cesiumContainer"></div>
-    <script>
-      // ✅ Твой токен доступа
-      Cesium.Ion.defaultAccessToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI1NDgwZmY4MS0wYjJjLTQwZDAtYjgxMC0wNmU0OTBiMzNjNzEiLCJpZCI6Mjg4NjQ5LCJpYXQiOjE3NDMxNTEzNjV9.78SOshFiLo1g6VT_K3cUMbL3Cpcp8GMTRcCP1aQfs_Q';
+<head>
+  <meta charset="UTF-8" />
+  <title>Magnetic Map</title>
+  <script src="https://cesium.com/downloads/cesiumjs/releases/1.113/Build/Cesium/Cesium.js"></script>
+  <link href="https://cesium.com/downloads/cesiumjs/releases/1.113/Build/Cesium/Widgets/widgets.css" rel="stylesheet" />
+  <style>
+    html, body, #cesiumContainer {
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
+  </style>
+</head>
+<body>
+  <div id="cesiumContainer"></div>
+  <script>
+    // ✅ Указываем токен
+    Cesium.Ion.defaultAccessToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI1NDgwZmY4MS0wYjJjLTQwZDAtYjgxMC0wNmU0OTBiMzNjNzEiLCJpZCI6Mjg4NjQ5LCJpYXQiOjE3NDMxNTEzNjV9.78SOshFiLo1g6VT_K3cUMbL3Cpcp8GMTRcCP1aQfs_Q';
 
-      // ✅ Инициализация сцены
-      const viewer = new Cesium.Viewer('cesiumContainer', {
-        terrainProvider: Cesium.CesiumTerrainProvider.fromIonAssetId(1),
-        imageryProvider: new Cesium.IonImageryProvider({ assetId: 3 }),
-        baseLayerPicker: false
+    // ✅ Создаём terrain-провайдер (ID: 1 — глобальный рельеф Cesium World Terrain)
+    const terrainProvider = Cesium.CesiumTerrainProvider.fromIonAssetId(1);
+
+    // ✅ Запускаем viewer с terrain и спутниковой подложкой
+    const viewer = new Cesium.Viewer('cesiumContainer', {
+      terrainProvider: terrainProvider,
+      imageryProvider: new Cesium.IonImageryProvider({ assetId: 3 }),
+      baseLayerPicker: false
+    });
+
+    // ✅ Загружаем твою карту (ID: 3263528)
+    async function loadKML() {
+      const resource = await Cesium.IonResource.fromAssetId(3263528);
+      const dataSource = await Cesium.KmlDataSource.load(resource, {
+        camera: viewer.scene.camera,
+        canvas: viewer.scene.canvas
       });
+      viewer.dataSources.add(dataSource);
+      viewer.flyTo(dataSource);
+    }
 
-      // ✅ Загрузка твоей магнитной карты
-      async function loadKmlLayer() {
-        const resource = await Cesium.IonResource.fromAssetId(3263528);
-        const dataSource = await Cesium.KmlDataSource.load(resource, {
-          camera: viewer.scene.camera,
-          canvas: viewer.scene.canvas
-        });
-        viewer.dataSources.add(dataSource);
-
-        // ✅ Центрировать камеру на карту
-        viewer.flyTo(dataSource);
-      }
-
-      loadKmlLayer();
-    </script>
-  </body>
+    loadKML();
+  </script>
+</body>
 </html>
