--- a/index.html
+++ b/index.html
@@ -1,44 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Magnetic Map</title>
-  <script src="https://cesium.com/downloads/cesiumjs/releases/1.113/Build/Cesium/Cesium.js"></script>
-  <link href="https://cesium.com/downloads/cesiumjs/releases/1.113/Build/Cesium/Widgets/widgets.css" rel="stylesheet" />
-  <style>
-    html, body, #cesiumContainer {
-      width: 100%;
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-    }
-  </style>
-</head>
-<body>
-  <div id="cesiumContainer"></div>
-  <script>
-    Cesium.Ion.defaultAccessToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI1NDgwZmY4MS0wYjJjLTQwZDAtYjgxMC0wNmU0OTBiMzNjNzEiLCJpZCI6Mjg4NjQ5LCJpYXQiOjE3NDMxNTEzNjV9.78SOshFiLo1g6VT_K3cUMbL3Cpcp8GMTRcCP1aQfs_Q';
+  <head>
+    <meta charset="UTF-8" />
+    <title>Magnetism Map</title>
+    <script src="https://cesium.com/downloads/cesiumjs/releases/1.110/Build/Cesium/Cesium.js"></script>
+    <link
+      href="https://cesium.com/downloads/cesiumjs/releases/1.110/Build/Cesium/Widgets/widgets.css"
+      rel="stylesheet"
+    />
+    <style>
+      html,
+      body,
+      #cesiumContainer {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="cesiumContainer"></div>
+    <script>
+      window.CESIUM_BASE_URL = "";
 
-    const terrainProvider = Cesium.CesiumTerrainProvider.fromIonAssetId(1);
+      async function startCesium() {
+        Cesium.Ion.defaultAccessToken =
+          "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI1NDgwZmY4MS0wYjJjLTQwZDAtYjgxMC0wNmU0OTBiMzNjNzEiLCJpZCI6Mjg4NjQ5LCJpYXQiOjE3NDMxNTEzNjV9.78SOshFiLo1g6VT_K3cUMbL3Cpcp8GMTRcCP1aQfs_Q";
 
-    const viewer = new Cesium.Viewer('cesiumContainer', {
-      terrainProvider: terrainProvider,
-      imageryProvider: new Cesium.IonImageryProvider({ assetId: 3 }),
-      baseLayerPicker: false
-    });
+        const viewer = new Cesium.Viewer("cesiumContainer", {
+          terrainProvider: await Cesium.createWorldTerrain(),
+          imageryProvider: await Cesium.createWorldImagery(),
+          timeline: true,
+          animation: true,
+          shouldAnimate: true,
+        });
 
-    async function loadKML() {
-      const resource = await Cesium.IonResource.fromAssetId(3263528);
-      const dataSource = await Cesium.KmlDataSource.load(resource, {
-        camera: viewer.scene.camera,
-        canvas: viewer.scene.canvas
-      });
-      viewer.dataSources.add(dataSource);
-      viewer.flyTo(dataSource);
-    }
+        // Загрузка магнитной карты (KML)
+        const resource = await Cesium.IonResource.fromAssetId(3263528);
+        const dataSource = await Cesium.KmlDataSource.load(resource);
+        viewer.dataSources.add(dataSource);
 
-    loadKML();
-  </script>
-</body>
+        // Авто-приближение камеры на магнитную карту
+        viewer.flyTo(dataSource);
+      }
+
+      startCesium();
+    </script>
+  </body>
 </html>
