--- a/index.html
+++ b/index.html
@@ -1,49 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Magnetism Map</title>
-    <script src="https://cesium.com/downloads/cesiumjs/releases/1.110/Build/Cesium/Cesium.js"></script>
-    <link
-      href="https://cesium.com/downloads/cesiumjs/releases/1.110/Build/Cesium/Widgets/widgets.css"
-      rel="stylesheet"
-    />
-    <style>
-      html,
-      body,
-      #cesiumContainer {
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="cesiumContainer"></div>
-    <script>
-      Cesium.Ion.defaultAccessToken =
-        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI1NDgwZmY4MS0wYjJjLTQwZDAtYjgxMC0wNmU0OTBiMzNjNzEiLCJpZCI6Mjg4NjQ5LCJpYXQiOjE3NDMxNTEzNjV9.78SOshFiLo1g6VT_K3cUMbL3Cpcp8GMTRcCP1aQfs_Q";
+<head>
+  <meta charset="UTF-8" />
+  <title>Magnetism Map</title>
+  <script src="https://cesium.com/downloads/cesiumjs/releases/1.110/Build/Cesium/Cesium.js"></script>
+  <link href="https://cesium.com/downloads/cesiumjs/releases/1.110/Build/Cesium/Widgets/widgets.css" rel="stylesheet" />
+  <style>
+    html, body, #cesiumContainer {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+  </style>
+</head>
+<body>
+  <div id="cesiumContainer"></div>
+  <script>
+    // Твой токен
+    Cesium.Ion.defaultAccessToken = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI1NDgwZmY4MS0wYjJjLTQwZDAtYjgxMC0wNmU0OTBiMzNjNzEiLCJpZCI6Mjg4NjQ5LCJpYXQiOjE3NDMxNTEzNjV9.78SOshFiLo1g6VT_K3cUMbL3Cpcp8GMTRcCP1aQfs_Q";
 
-      const viewer = new Cesium.Viewer("cesiumContainer", {
-        terrainProvider: Cesium.createWorldTerrain(),
-        imageryProvider: new Cesium.IonImageryProvider({ assetId: 2 }), // Bing Maps Aerial
-        timeline: true,
-        animation: true,
-        shouldAnimate: true,
+    // Создаём Viewer с террейном и подложкой
+    const viewer = new Cesium.Viewer("cesiumContainer", {
+      terrainProvider: new Cesium.CesiumTerrainProvider({
+        url: Cesium.IonResource.fromAssetId(1), // World Terrain
+      }),
+      imageryProvider: new Cesium.IonImageryProvider({ assetId: 2 }), // Bing Aerial
+      baseLayerPicker: false,
+      timeline: true,
+      animation: true,
+    });
+
+    // Загружаем KML (магнитная карта)
+    Cesium.IonResource.fromAssetId(3263528)
+      .then(function (resource) {
+        return Cesium.KmlDataSource.load(resource);
+      })
+      .then(function (dataSource) {
+        viewer.dataSources.add(dataSource);
+        viewer.flyTo(dataSource);
+      })
+      .otherwise(function (error) {
+        console.error("Ошибка загрузки KML:", error);
       });
-
-      // Загрузка магнитной карты
-      Cesium.IonResource.fromAssetId(3263528)
-        .then((resource) => Cesium.KmlDataSource.load(resource))
-        .then((dataSource) => {
-          viewer.dataSources.add(dataSource);
-          viewer.flyTo(dataSource);
-        })
-        .otherwise(function (error) {
-          console.error("Ошибка загрузки KML:", error);
-        });
-    </script>
-  </body>
+  </script>
+</body>
 </html>
