--- a/index.html
+++ b/index.html
@@ -18,27 +18,27 @@
 <body>
   <div id="cesiumContainer"></div>
   <script>
+    // Твой access token
     Cesium.Ion.defaultAccessToken = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI1NDgwZmY4MS0wYjJjLTQwZDAtYjgxMC0wNmU0OTBiMzNjNzEiLCJpZCI6Mjg4NjQ5LCJpYXQiOjE3NDMxNTEzNjV9.78SOshFiLo1g6VT_K3cUMbL3Cpcp8GMTRcCP1aQfs_Q";
 
+    // Создание viewer с terrain
     const viewer = new Cesium.Viewer("cesiumContainer", {
-      terrainProvider: Cesium.createWorldTerrain(),
-      imageryProvider: Cesium.createWorldImagery(),
-      baseLayerPicker: false,
+      terrainProvider: Cesium.WorldTerrain,
+      baseLayerPicker: true,
       animation: true,
-      timeline: true,
+      timeline: true
     });
 
+    // Загрузка твоего KML из Cesium Ion
     const kmlAssetId = 3263528;
     const kmlResource = Cesium.IonResource.fromAssetId(kmlAssetId);
 
-    Cesium.KmlDataSource.load(kmlResource)
-      .then((dataSource) => {
-        viewer.dataSources.add(dataSource);
-        viewer.flyTo(dataSource);
-      })
-      .catch((error) => {
-        console.error("Ошибка загрузки KML:", error);
-      });
+    Cesium.KmlDataSource.load(kmlResource).then((dataSource) => {
+      viewer.dataSources.add(dataSource);
+      viewer.flyTo(dataSource);
+    }).catch((error) => {
+      console.error("Ошибка при загрузке KML:", error);
+    });
   </script>
 </body>
 </html>
